--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,5 +1,5 @@
-<div class="py-s4 px-[36px] flex justify-between items-center bg-primary-800 text-secondary-100">
-    <div class="flex-1 flex gap-s3 items-center text-secondary-600">
+<div class="py-s4 px-s6 lg:px-[36px] flex justify-center md:justify-between items-center bg-primary-800 text-secondary-100 gap-s7">
+    <div class="flex-1 flex gap-s3 items-center text-secondary-600 to-md:hidden">
         {% render '16-logo-facebook-simple' %}
         {% render '16-logo-linkedin-simple' %}
         {% render '16-logo-twitter' %}
@@ -8,13 +8,13 @@
         <div class="mr-s4 text-secondary-600">
             {% render 'left-arrow' %}
         </div>
-        <p class="mt-0 faux-p-sm">Banner announcement or ad with potential discount <b>CODENAME</b></p>
+        <p class="mt-0 faux-p-sm to-md:text-13 text-center">Banner announcement or ad with potential discount <b>CODENAME</b></p>
         <div class="mt-0 ml-s4 rotate-180 text-secondary-600">
             {% render 'left-arrow' %}
         </div>
     </div>
-    <div class="flex-1 flex justify-end items-center gap-s6 text-secondary-600">
-        <a class="">Help + FAQs</a>
+    <div class="flex-1 flex justify-end items-center gap-s6 text-secondary-600 to-md:hidden">
+        <a class="to-lg:hidden">Help + FAQs</a>
         <button class="faux-p-sm w-s3 h-s3">
             {% render "12-close" %}
         </button>
