--- a/sections/featured-categories.liquid
+++ b/sections/featured-categories.liquid
@@ -1,13 +1,15 @@
-<div class="mx-auto">
-    <p class="faux-h6 text-black-400  text-center"> {{ section.settings.preheading }} </p>
-    <h2 class="faux-h4 text-primary-800 text-center max-w-[800px] mx-auto mt-s6"> {{ section.settings.heading }} </h2>
-    <div class="flex gap-s8 mt-s10">
-        {% for block in section.blocks %}
-            <div class="flex-1">
-                <img class="h-[360px] w-full object-cover" src="{{ block.settings.image | image_url }}"/>
-                <a class="mt-s6 btn btn--borderless" href="{{ block.settings.linkDest.url }}">{{ block.settings.linkLabel }}</a>
-            </div>
-        {% endfor %}
+<div class="py-s12 md:py-s13 px-54 md:px-72 lg:px-s13">
+    <div class="mx-auto">
+        <p class="faux-h6 text-black-400  text-center"> {{ section.settings.preheading }} </p>
+        <h2 class="faux-h4 text-primary-800 text-center max-w-[800px] mx-auto mt-s6"> {{ section.settings.heading }} </h2>
+        <div class="flex to-sm:flex-col gap-s8 mt-s10">
+            {% for block in section.blocks %}
+                <div class="flex-1">
+                    <img class="h-[360px] w-full object-cover" src="{{ block.settings.image | image_url }}"/>
+                    <a class="mt-s6 btn btn--borderless" href="{{ block.settings.linkDest.url }}">{{ block.settings.linkLabel }}</a>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </div>
 
@@ -15,7 +17,6 @@
 {% schema %}
     {
         "name": "featured-categories",
-        "class": "p-s13",
         "max_blocks": 2,
         "blocks": [
             {
