--- a/sections/three-pane-callout.liquid
+++ b/sections/three-pane-callout.liquid
@@ -1,21 +1,22 @@
-<div class="relative bg-primary-800 max-w-[1020px] mx-auto text-white text-center">
-    <h2> {{ section.settings.heading }} </h2>
-    <h3 class="faux-p text-secondary-100 mt-[28px]"> {{ section.settings.subheading }} </h3>
-    <div class="flex relative w-full h-[620px] -bottom-s13 -mt-s9 gap-s6">
-        {% for block in section.blocks %}
-            <div class="flex-1 bg-primary-100 flex justify-center items-center relative">
-                <img src="{{ block.settings.image | image_url }}" class="object-cover absolute w-full h-full object-cover"/>
-                <span class="faux-h3 z-10">{{ block.settings.label }}</span>
-            </div>
-        {% endfor %}
-    </div>
+<div class="bg-primary-800 px-54 md:px-72 pt-s12 md:pt-s13 mb-s12 md:mb-s13">
+    <div class="relative bg-primary-800 max-w-[1020px] mx-auto text-white text-center">
+        <h2> {{ section.settings.heading }} </h2>
+        <h3 class="faux-p text-secondary-100 mt-[28px]"> {{ section.settings.subheading }} </h3>
+        <div class="flex to-sm:flex-col relative to-sm:max-w-[380px] to-sm:mx-auto w-full sm:h-[200px] md:h-[400px] lg:h-[620px] -bottom-s12 md:-bottom-s13 -mt-s9 md:-mt-[56px] gap-s6">
+            {% for block in section.blocks %}
+                <div class="flex-1 bg-primary-100 flex justify-center items-center relative">
+                    <img src="{{ block.settings.image | image_url }}" class="object-cover absolute w-full h-full object-cover"/>
+                    <span class="faux-h3 z-10 to-sm:h-[500px] to-sm:flex to-sm:items-center">{{ block.settings.label }}</span>
+                </div>
+            {% endfor %}
+        </div>
 
+    </div>
 </div>
 
 {% schema %}
     {
         "name": "three-pane-callout",
-        "class": "bg-primary-800 px-s13 pt-s13 mb-s13",
         "max_blocks": 3,
         "blocks": [
             {
