--- a/css/buttons.css
+++ b/css/buttons.css
@@ -25,11 +25,12 @@
         py-s3
         ui-base
         uppercase
-        tracking-[.15em]
-        transition-all duration-500 ease-in-out;
+        tracking-[.15em];
     z-index: 1;
     color: var(--btn-text);
     background: var(--btn-bg);
+    transition: all 0.3s ease, visibility 0ms;
+
 }
 
 
