--- a/css/nav.css
+++ b/css/nav.css
@@ -8,36 +8,79 @@ nav{
     @apply flex items-center max-w-content-lg mx-auto;
 }
 
+@media screen and (max-width: 1023px){
 
-.menu__link:hover+.menu__dropdown,
-.menu__dropdown:hover{
-    display:block;
+    .nav-primary.container{
+        display:none;
+    }
+
+    .nav-primary.container.active{
+        display:inline-block;
+        position:absolute;
+        top: calc(100% + 1px);
+        left:0;
+        width:100vw;
+        background-color:white;
+    }
+
+    .menu__item.level--1{
+        @apply w-full;
+    }
+
+    .menu-column.link-list{
+        @apply w-full px-s8;
+    }
 }
 
-.menu__dropdown{
-    display:none;
+@media screen and (min-width: 1024px){
+    .nav-primary.container{
+        @apply flex-1 flex gap-[24px] h-full;
+    }
+    .menu__item.level--1{
+        @apply text-black-600 h-full;
+    }
+    .menu__link{
+        @apply h-full flex items-center;
+    }
+    .menu__dropdown{
+        @apply w-screen bg-white absolute left-0 py-s10 px-s13 hidden;
+        top: calc(100% + 1px);
+    }
+    .menu__columns{
+        @apply flex max-w-[1200px] mx-auto bg-white gap-s8 z-10;
+    }
+    .menu-column{
+        @apply flex-1;
+    }
+
+    .menu__link:hover+.menu__dropdown,
+    .menu__dropdown:hover{
+        display:block;
+    }
+
+    .dropdown__list-item--level-1:not(:first-child){
+        @apply mt-s4;
+    }
+
+    .dropdown__list--level-2{
+        @apply mt-s5;
+    }
+
+    .dropdown__link--level-1{
+        @apply text-primary-800 uppercase;
+    }
+
+
+    .dropdown__list-item--level-2:not(:first-child){
+        @apply mt-s2;
+    }
+
+    .dropdown__link--level-2{
+        @apply text-black-600 capitalize;
+    }
 }
 
-.dropdown__list-item--level-1:not(:first-child){
-    @apply mt-s4;
-}
 
-.dropdown__list--level-2{
-    @apply mt-s5;
-}
-
-.dropdown__link--level-1{
-    @apply text-primary-800 uppercase;
-}
-
-
-.dropdown__list-item--level-2:not(:first-child){
-    @apply mt-s2;
-}
-
-.dropdown__link--level-2{
-    @apply text-black-600 capitalize;
-}
 
 /* search animation */
 
@@ -69,4 +112,15 @@ nav .search input{
 }
 
 nav.search-mode .search input{
+}
+
+
+/* sidebar menu */
+
+.sidebar-link.top-level:not(:first-child){
+    @apply mt-s9;
+}
+
+.sidebar-link.second-level{
+    @apply mt-s6;
 }
