--- a/sections/floating_cta.liquid
+++ b/sections/floating_cta.liquid
@@ -1,22 +1,23 @@
-<div class="w-full max-w-content mx-auto py-s8 relative">
-    <div class="bg-secondary-50">
-        <div class="max-w-[510px] p-s11">
-            <h2 class="faux-h4 text-primary-800">{{ section.settings.heading }}</h2>
-            <p class="mt-s8">{{ section.settings.text }}</p>
-            <a class="mt-s8 btn btn--sm" href="{{ section.settings.buttonDest.url }}">{{ section.settings.buttonLabel }}</a>
+<div class="px-[27px] md:px-54 lg:px-72 py-s10 xl:p-s13">
+    <div class="w-full max-w-[400px] md:max-w-[768px] lg:max-w-content mx-auto to-md:px-s7 md:py-s7 lg:py-s8 relative to-md:flex to-md:flex-col">
+        <div class="bg-secondary-50 to-md:pt-[calc((100%+64px)*1.3+20px)]">
+            <div class="max-w-[330px] lg:max-w-[380px] xl:max-w-[440px] px-s8 lg:px-[60px] xl:pl-s11 py-s8 md:py-s9 lg:py-s11">
+                <h2 class="faux-h4 text-primary-800">{{ section.settings.heading }}</h2>
+                <p class="mt-s8 text-black-600">{{ section.settings.text }}</p>
+                <a class="mt-s8 btn btn--sm" href="{{ section.settings.buttonDest.url }}">{{ section.settings.buttonLabel }}</a>
+            </div>
         </div>
-    </div>
-    <div class="absolute right-0 top-0 w-[45%] h-full flex items-center">
-        <img src="{{ section.settings.backgroundTexture | image_url }}" class="absolute right-0 py-s8 w-s8 h-full object-cover" />
-        <img src="{{ section.settings.productImage | image_url }}" class="w-1/2 aspect-square absolute -left-[25%] object-cover"/>
-        <img src="{{ section.settings.mainImage | image_url }}" class="w-full h-full pr-s8 object-cover"/>
+        <div class="static md:absolute right-0 top-0 w-full md:w-[40%] lg:w-[45%] h-full flex items-center to-md:flex-col order-first">
+            <img src="{{ section.settings.backgroundTexture | image_url }}" class="absolute to-md:top-0 md:right-0 to-md:px-s7 md:py-s7 lg:py-s8 to-md:h-s5 w-full md:w-s5 lg:w-s8 h-full object-cover" />
+            <img src="{{ section.settings.productImage | image_url }}" class="w-1/2 aspect-square absolute to-md:mt-[calc(80%+20px)] md:-left-[25%] object-cover z-10"/>
+            <img src="{{ section.settings.mainImage | image_url }}" class="w-[calc(100%+84px)] md:w-full md:h-full to-md:aspect-square to-md:absolute to-md:left-0 to-md:right-0 to-md:top-s5 md:pr-s5 lg:pr-s8 object-cover"/>
+        </div>
     </div>
 </div>
 
 {% schema %}
     {
         "name": "floating-cta",
-        "class": "p-s13 pb-s14",
         "settings": [
             {
                 "type": "text",
