--- a/sections/sale-cta.liquid
+++ b/sections/sale-cta.liquid
@@ -1,22 +1,23 @@
-<div class="w-full max-w-content mx-auto flex to-md:flex-col gap-s7 lg:gap-s9">
-    <div class="md:w-[366px] shrink flex justify-end">
-        {% if section.settings.headingImage %}
-            <img src="{{ section.settings.headingImage | image_url }}" class="w-[360px]"/>
-        {% else %}
-            <h2 class="faux-h4 md:w-[230px] text-right text-secondary-100"> {{ section.settings.heading }} </h2>
-        {% endif %}
-    </div>
-    <div class="md:w-[2px] h-[2px] md:h-auto bg-secondary-500"></div>
-    <div class="flex-none">
-        <p class="text-white">{{ section.settings.text }}</p>
-        <a class="mt-s6 btn btn--sm" href="{{ block.settings.buttonDest.url }}">{{ section.settings.buttonLabel }} </a>
+<div class="bg-primary-800 py-s10 px-54 md:px-72 lg:px-s13">
+    <div class="w-full max-w-content mx-auto flex to-md:flex-col to-md:items-center gap-s7 md:gap-s8 lg:gap-s9">
+        <div class="md:w-[366px] shrink flex justify-center md:justify-end items-center">
+            {% if section.settings.headingImage %}
+                <img src="{{ section.settings.headingImage | image_url }}" class="w-[360px]"/>
+            {% else %}
+                <h2 class="faux-h4 w-[180px] md:w-[230px] text-right text-secondary-100"> {{ section.settings.heading }} </h2>
+            {% endif %}
+        </div>
+        <div class="w-full md:w-[1px] h-[1px] md:h-auto max-w-[230px] to-md:mx-auto bg-secondary-500"></div>
+        <div class="to-md:max-w-[306px] flex flex-col justify-center items-center md:items-start">
+            <p class="text-white to-md:text-center">{{ section.settings.text }}</p>
+            <a class="mt-s8 btn btn--sm" href="{{ block.settings.buttonDest.url }}">{{ section.settings.buttonLabel }} </a>
+        </div>
     </div>
 </div>
 
 {% schema %}
     {
         "name": "sale-cta",
-        "class": "bg-primary-800 py-s9 px-s13",
         "settings": [
             {
                 "type": "text",
